# OoF

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  bootstrap_res_v1.pkl  bootstrap_res_v11.pkl  bootstrap_res_v12.pkl  bootstrap_res_v13.pkl  bootstrap_res_v16.pkl  bootstrap_res_v2.pkl  bootstrap_res_v6.pkl  bootstrap_res_v8.pkl  generate_uncertainty.py  load_data.py  oti_analysis.py  plot_data.py  pyproject.toml  pyproject.toml~  requirements.txt  subselect_data.py  test.py  tutorial.ipynb  vol-1-mcmc-results.pkl  vol-10-mcmc-results.pkl  vol-11-mcmc-results.pkl  vol-13-mcmc-results.pkl  vol-14-mcmc-results.pkl  vol-16-mcmc-results.pkl  vol-5-mcmc-results.pkl  vol-6-mcmc-results.pkl  vol-7-mcmc-results.pkl
OoF/: compute_stats.py  generate_uncertainty.py  oti_analysis.py  plot_data.py  subselect_data.py
boots/: bootstrap_res_v10.pkl  bootstrap_res_v14.pkl  bootstrap_res_v15.pkl  bootstrap_res_v3.pkl  bootstrap_res_v4.pkl  bootstrap_res_v5.pkl  bootstrap_res_v7.pkl  bootstrap_res_v9.pkl
docs/: OoF.rst  conf.py  conf.py~  index.rst  modules.rst
docs/docs/source/: index.rst
docs/source/: conf.py~
mcmc/: vol-12-mcmc-results.pkl  vol-15-mcmc-results.pkl  vol-2-mcmc-results.pkl  vol-3-mcmc-results.pkl  vol-4-mcmc-results.pkl  vol-8-mcmc-results.pkl  vol-9-mcmc-results.pkl
